# tinyshap

./: .gitignore  LICENCE  README.md  makefile  pyproject.toml
microshap/: explainer.py
notebooks/: clr.ipynb  demo.ipynb
src/tinyshap/: explainer.py
tests/: test_explainer.py
tinyshap/: __init__.py  explainer.py
