[build-system]
requires = ["setuptools", "wheel"]

[project]
name = 'microshap'
dynamic = [
  'version'
]
description = 'Minimal implementation of Shapley values algorithm'
readme = 'README.md'
authors = [
  { name = 'The Pandas Development Team', email='pandas-dev@python.org' },
]
license = {file = 'LICENSE'}
requires-python = '>=3.8'
dependencies = [
  "numpy>=1.20.3",
  "pandas>=1.5.3",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
