[build-system]
requires = ["setuptools", "wheel"]

[project]
name = 'tinyshap'
dynamic = [
  'version'
]
description = 'Minimal implementation of approximate Kernel SHAP algorithm'
readme = 'README.md'
authors = [
  { name = 'Theodore Tsitsimis', email='th.tsitsimis@gmail.com' },
]
license = {file = 'LICENSE'}
requires-python = '>=3.8'
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.2.2",
  "loguru>=0.7.0",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
