[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'tinyshap'
version = '0.0.7'
description = 'Minimal implementation of approximate Kernel SHAP algorithm'
readme = 'README.md'
authors = [
  { name = 'Theodore Tsitsimis', email='th.tsitsimis@gmail.com' },
]
license = {file = 'LICENSE'}
requires-python = '>=3.7'
dependencies = [
  "pandas>=1.4.0",
  "scikit-learn>=1.1.1",
  "constrainedlr>=0.1.0"
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/tsitsimis/tinyshap"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
